# x01-blink-f4-rs

./: .gitignore  Cargo.toml  gdbinit.cfg  memory.x  openocd.cfg
.cargo/: config
docs/: convert-stm32f1-to-stm32f4.md
src/: main.rs
